--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -32,7 +32,7 @@
                 <header role="banner" class="Sticky AppHeader" data-za-module="TopNavBar" style="">
                     <div class="AppHeader-inner">
                         <a href="#" aria-label="复元">
-                            <svg viewBox="0 0 200 91" class="Icon ZhihuLogo ZhihuLogo--blue Icon--logo" width="64" height="30" aria-hidden="true" style="height: 30px; width: 64px;">
+                            <svg viewBox="0 0 200 91" class="Icon FLogo ZhihuLogo--blue Icon--logo" width="64" height="30" aria-hidden="true" style="height: 30px; width: 64px;">
                                 <title></title>
                                 <g>
                                    <img src="static/img/car.png" width="60" height="40" alt="复元" >                                </g>
